--- a/package.json
+++ b/package.json
@@ -36,11 +36,15 @@
     "xlsx": "^0.15.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
+    "@vue/cli-plugin-babel": "^4.1.1",
+    "@vue/cli-plugin-eslint": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-component": "^1.1.1",
-    "compression-webpack-plugin": "^2.0.0",
+    "compression-webpack-plugin": "^3.0.0",
+    "core-js": "^3.4.8",
+    "eslint": "^4.19.1",
+    "eslint-plugin-vue": "^6.0.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "svg-sprite-loader": "^3.8.0",
